2004-08-10  Satoru Takabayashi  <satoru@namazu.org>

	* pdumpfs.in (parse_options): Fix a bug arised by the yesterday's
	modification. 

2004-08-09  Satoru Takabayashi  <satoru@namazu.org>

	* pdumpfs.in (parse_options): Don't strip the trailing / if
	ARGV[0] == "/". Suggested by Toshikazu Ichikawa <ichikawa at
	toshikazu.org>

2004-08-04  Satoru Takabayashi  <satoru@namazu.org>

	* pdumpfs.in (parse_options): Make the option parser quiet.

2004-08-02  Satoru Takabayashi  <satoru@namazu.org>

	* ChangeLog: Obfuscate email addresses to prevent spams.

2004-07-13  Satoru Takabayashi  <satoru@namazu.org>

	* Makefile (VERSION): Bumped version number to 1.1.

2004-07-09  Satoru Takabayashi  <satoru@namazu.org>

	* pdumpfs.in (File::PdumpfsForm::get_program_directory): New method.
	(File::PdumpfsForm::get_program_file_name): Renamed from program_name.

2004-06-30  Satoru Takabayashi  <satoru@namazu.org>

	* pdumpfs.in (main): Add \n to printf for displaying errors. Fix
	the bug reported by SASADA Koichi<ko1 at atdot.net>. [pdumpfs-new:12]
	(parse_options): Add a check for the availability of File.fnmatch.

2004-06-22  Satoru Takabayashi  <satoru@namazu.org>

	* doc/pdumpfs-ja.html: Moved from ..
	* doc/pdumpfs.html: Ditto.
	* doc/images/pdumpfs.png: New file.
	* doc/images/pdumpfs-mini.png: New file.
	* doc/images/pdumpfs-ja.png: New file.
	* doc/images/pdumpfs-ja-mini.png: New file.

 	* pdumpfs: Version 1.0 released.

	* Makefile (dist): Don't include  pdumpfs.exe.manifest.

	* Makefile (VERSION): Bumped version number to 1.0.

2004-05-22  Satoru Takabayashi  <satoru@namazu.org>

	* pdumpfs.in (Pdumpfs::Pdumpfs::convert_bytes): New method.

2004-05-21  Satoru Takabayashi  <satoru@namazu.org>

	* pdumpfs.in (Pdumpfs::PdumpfsForm::task_scheduler_menu_clicked):
	New method.
	(Pdumpfs::TimerDialog): Removed.
	(Pdumpfs::TaskSchedulerDialog::construct): New class.
	(Pdumpfs::PdumpfsForm::set_timer_menu_clicked): Removed.