@@ -724,7 +724,6 @@ if has_vruby?
 
           pdumpfs = Pdumpfs::Pdumpfs.new(:reporter => reporter,
                                          :log_file => @log_file,
-                                         :verbose  => true,
                                          :interval_proc => interval_proc
                                          )
           pdumpfs.start(src, dest)
@@ -807,7 +806,6 @@ module Pdumpfs
     def initialize (config = {})
       @matcher  = (config[:matcher]  or NullMatcher.new)
       @reporter = (config[:reporter] or lambda {|x| puts x })
-      @verbose  = (config[:verbose]  or false)
       @log_file = (config[:log_file] or nil)
       @interval_proc = (config[:interval_proc] or lambda {})
       @written_bytes = 0
@@ -1006,7 +1004,7 @@ module Pdumpfs
         r = s.sub(%r[^#{Regexp.quote(src)}/?], "")
         t = File.join(dest, r)
 
-        @reporter.call(s) if @verbose
+        @reporter.call(s)
         @interval_proc.call
         begin
           case File.ftype(s)
@@ -1065,6 +1063,7 @@ def usage
   puts "  -w, --exclude-by-glob=GLOB     exclude files matching GLOB"
   puts "  -l, --log-file=FILE            write a log to FILE"
   puts "  -v, --version                  print version information and exit"
+  puts "  -q, --quiet                    suppress all normal output"
   puts "  -h, --help                     show this help message"
   exit 0
 end
@@ -1072,6 +1071,11 @@ end
 def version
   puts "Usage: pdumpfs #{Pdumpfs::VERSION}"
   exit 0
+end
+
+def be_quiet
+  devnull = if windows? then "NUL" else "/dev/null" end
+  STDOUT.reopen(devnull)
 end
 
 def parse_options
@@ -1085,6 +1089,7 @@ def parse_options
                      ['--exclude-by-size', GetoptLong::REQUIRED_ARGUMENT],
                      ['--exclude-by-glob', GetoptLong::REQUIRED_ARGUMENT],
                      ['--log-file', '-l',  GetoptLong::REQUIRED_ARGUMENT],
+                     ['--quiet', '-q',     GetoptLong::NO_ARGUMENT],
                      ['--help', '-h',      GetoptLong::NO_ARGUMENT],
                      ['--version', '-v',   GetoptLong::NO_ARGUMENT]
                      )
@@ -1104,6 +1109,8 @@ def parse_options
       config[:log_file] = arg
     when '--help'
       usage
+    when '--quiet'
+      be_quiet
     when '--version'
       version
     end
