@@ -1,7 +1,11 @@
 2004-08-10  Satoru Takabayashi  <satoru@namazu.org>
 
+	* tests/pdumpfs-test: be quiet.
+
 	* pdumpfs.in (parse_options): Fix a bug arised by the yesterday's
 	modification. 
+	(parse_options): New option: --quiet.
+	(Pdumpfs::Pdumpfs::initialize): Remove field @verbose.
 
 2004-08-09  Satoru Takabayashi  <satoru@namazu.org>
 
